# terragrunt-wrapper

./: .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  README.md  cookiecutter.json  pyproject.toml  requirements.txt  tg-wrapper
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-release.yaml  pre-commit.yaml  release.yaml
terragrunt_wrapper/: __init__.py
tests/: test_terragrunt_wrapper.py
{{ cookiecutter.project_name }}/: LICENSE  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: build-and-release.yaml  pre-commit.yaml
