[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["chriscunningham-cts <chris.cunningham@cloudsolutions.co.uk>"]
license = "{{ cookiecutter.license }}"

[tool.poetry.scripts]
"{{ cookiecutter.project_name }}" = "{{ cookiecutter.project_name }}:main"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
black = "^21.6b0"
autopep8 = "^1.5.7"
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"

[tool.black]
line-length = 80

[tool.coverage.paths]
source = ["{{ cookiecutter.project_name }}"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_name }}"]

[tool.coverage.report]
show_missing = true
